<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agenda</string>
    <string name="strProximasTarefas">Proximas Tarefas: </string>
    <string name="title_activity_nova_tarefa">Criar Nova Tarefa</string>
    <string name="strDisciplina">Disciplina</string>
    <string name="strAtividade">Atividade: </string>
    <string name="strDataHora">Data / Hora</string>
    <string name="strLembrete">Horário para notificação: </string>
    <string name="strOk">OK</string>
    <string name="title_activity_atividades">Lista de Atividades</string>
    <string name="title_activity_disciplinas">Lista de Disciplinas</string>
    <string name="strDisciplinas">Disciplinas Cadastradas: </string>
    <string name="strData">"Data: "</string>
    <string name="strDe">" de: "</string>
    <string name="strEm">&quot; Em: &quot;</string>
    <string name="strDefinirLembrete">"Definir notificação para tarefa: "</string>
    <string name="strDefinir">Definir</string>
    <string name="strNovaTarefa">"Nova Tarefa: "</string>
    <string name="strEmpty">dd/MM/yyyy</string>
    <string name="strAs">&quot; Ás: &quot;</string>
    <string name="strAtividades">Atividades Cadastradas</string>

</resources>
